test(behavioral): strengthen device pairing coverage